--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -20,7 +20,13 @@
         margin-top: 20px;
         .row{
             
-            display: flex;
+            display: grid;
+            grid-template-columns: 2, 1fr;
+            gap: 20px;
+            grid-template-areas:
+            "column1 column2"
+            "column3 column4"
+            "column5 column6";
             align-items: center;
             
             .col-lg-6{
@@ -50,6 +56,24 @@
                 line-height: 3.4rem;
                 font-size: 0.8rem;
             }
+            .grid-c1{
+                grid-area: column1;
+            }
+            .grid-c2{
+                grid-area: column2;
+            }
+            .grid-c3{
+                grid-area: column3;
+            }
+            .grid-c4{
+                grid-area: column4;
+            }
+            .grid-c5{
+                grid-area: column5;
+            }
+            .grid-c6{
+                grid-area: column6;
+            }
 }
 }
 }
@@ -59,6 +83,17 @@
 @media screen and (max-width: 768px) {
     .row{
         padding: 25px 0;
+        
+            
+            display: grid;
+            grid-template-columns: 2, 1fr;
+            gap: 20px;
+            grid-template-areas:
+            "column1 column2"
+            "column3 column4"
+            "column5 column6";
+            align-items: center;
+            
         .col-12{
             .imagenes__cocineros{
                 width: 18rem;
