--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -13,7 +13,7 @@
     
     &__menu{
         text-decoration: underline;
-        font-size: 44px;
+        font-size: 2.5rem;
         color: $green-color3;
     }
     &__info{
@@ -27,7 +27,7 @@
         text-align: center;
         padding: 40px;
         font-style: italic;
-        line-height: 2.4rem;
+        line-height: 2.1rem;
         font-size: 1.1rem;
         color: rgb(85, 83, 83);
     }
