--- a/css/style.css
+++ b/css/style.css
@@ -52,10 +52,10 @@
   align-items: center; }
   .hero__title2 {
     text-align: center;
-    font-size: 2.5rem; }
+    font-size: 2.6rem; }
   .hero__menu {
     text-decoration: underline;
-    font-size: 44px;
+    font-size: 2.5rem;
     color: #0d3a03; }
   .hero__info {
     font-size: 1.6rem;
@@ -66,7 +66,7 @@
     text-align: center;
     padding: 40px;
     font-style: italic;
-    line-height: 2.4rem;
+    line-height: 2.1rem;
     font-size: 1.1rem;
     color: #555353; }
 
@@ -81,7 +81,7 @@
 
 @media screen and (min-width: 768px) {
   .hero .hover__image, .hero .container .row .col-lg-6 .imagenes__cocineros {
-    width: 28rem;
+    width: 30rem;
     margin-top: 1rem; } }
 
 .hero {
@@ -92,18 +92,44 @@
   width: 100%; }
   .hero__tittle2 {
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 2.6rem;
     color: #166E22; }
   .hero .container {
     width: 100%;
     margin: 0 20px;
-    margin-top: 20px; }
+    margin-top: 20px;
+    display: grid; }
     .hero .container .row {
-      display: flex;
+      /*
+            display: grid;
+            grid-template-columns: repeat(2, 34rem);
+            gap: 20px;
+            grid-template-areas:
+            "part1 part2"
+            "part3 part4"
+            "part5 part6";
+            align-items: center;
+            */
+      display: grid;
+      grid-template-columns: repeat(1, 100vw);
+      gap: 20px;
+      grid-template-areas: "part1" "part2" "part4" "part3" "part5" "part6";
       align-items: center; }
+      .hero .container .row .grid-c1 {
+        grid-area: part1; }
+      .hero .container .row .grid-c2 {
+        grid-area: part2; }
+      .hero .container .row .grid-c3 {
+        grid-area: part3; }
+      .hero .container .row .grid-c4 {
+        grid-area: part4; }
+      .hero .container .row .grid-c5 {
+        grid-area: part5; }
+      .hero .container .row .grid-c6 {
+        grid-area: part6; }
       .hero .container .row .col-lg-6 {
-        display: flex;
-        justify-content: center; }
+        width: auto;
+        margin: 0 auto; }
         .hero .container .row .col-lg-6 .imagenes__cocineros {
           /*----------------- SASS OPERACIONES CON EXTEND---------------------- */ }
         .hero .container .row .col-lg-6 .imagenes__cocineros:hover {
@@ -115,13 +141,19 @@
           text-align: center;
           font-style: italic;
           line-height: 3.4rem;
-          font-size: 0.8rem; }
+          font-size: 0.9rem; }
 
-@media screen and (max-width: 768px) {
-  .row {
-    padding: 25px 0; }
-    .row .col-12 .imagenes__cocineros {
-      width: 18rem; } }
+@media screen and (min-width: 768px) {
+  .hero .container .row {
+    padding: 25px 0;
+    display: grid;
+    grid-template-columns: repeat(2, 34rem);
+    gap: 20px;
+    grid-template-areas: "part1 part2" "part3 part4" "part5 part6";
+    align-items: center; }
+    .hero .container .row .col-12 .imagenes__cocineros {
+      width: 28rem;
+      margin: 0 auto; } }
 
 .foot {
   display: flex;
@@ -158,7 +190,7 @@
   overflow: hidden; }
   .review__tittle2 {
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 2.6rem;
     margin-top: 2.6rem;
     color: #166E22; }
   .review .reviews {
