--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,9 @@
     position: absolute;
     left: 0; } }
 
+.carousel .carousel-inner .carousel-item .imagen-carousel {
+  height: 50vh; }
+
 .mnt-1 {
   margin-top: 1.5rem; }
 
