--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -64,3 +64,12 @@
         left: 0;
     }
 }
+.carousel{
+    .carousel-inner{
+        .carousel-item{
+            .imagen-carousel{
+                height: 50vh;
+            }
+        }
+    }
+}
