--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,9 @@
 @media screen and (max-width: 768px) {
   .navbar-expand-lg .navbar-nav .dropdown-menu {
     position: absolute;
-    left: 0; } }
-
-.carousel .carousel-inner .carousel-item .imagen-carousel {
-  height: 50vh; }
+    left: 0; }
+  .carousel .carousel-inner .carousel-item .imagen-carousel {
+    height: 50vh; } }
 
 .mnt-1 {
   margin-top: 1.5rem; }
