arreglos para tablet

--- a/scss/_reseñas.scss
+++ b/scss/_reseñas.scss
@@ -45,35 +45,44 @@
                     }
             }
         }
-       
+
+}
 
         
 
 
 @media screen and (min-width: 768px) {
     .reviews{
-        
-    
         margin: 0 25px;
-        
         &__testimonios{
-            width: 400px;
-            background: #fff;
+            width: 33rem;
+            
             min-height: 470px;
             margin: 15px 60px;
+            box-shadow: 7px 11px 22px rgb(221, 219, 219);            
             .image{
                 width: 15rem;
                 height: 10rem;
-                }
-            
+                }            
             }
         }
-}
+    }
 
-    .reviews__testimonios:hover{
+
+@media screen and (min-width: 1024px) {
+    .review{
+    .reviews{
+        &__testimonios{
+            background: #fff;
+            width: 25rem;
+            box-shadow: 7px 11px 22px rgb(255, 255, 255);
+        }
+
+        &__testimonios:hover{
+            background: #eee;
             box-shadow: 7px 11px 22px rgb(221, 219, 219);
-            
-            background-color: #eee;
             cursor: pointer;
         }
+}
+}
 }
