--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@
     color: #555353; }
 
 .hover__image, .hero .container .row .col-lg-6 .imagenes__cocineros {
-  width: 14rem;
+  width: 18rem;
   border-radius: 40px;
   top: 20px;
   transition: .4s; }
@@ -105,16 +105,6 @@
     margin-top: 20px;
     display: grid; }
     .hero .container .row {
-      /*
-            display: grid;
-            grid-template-columns: repeat(2, 34rem);
-            gap: 20px;
-            grid-template-areas:
-            "part1 part2"
-            "part3 part4"
-            "part5 part6";
-            align-items: center;
-            */
       display: grid;
       grid-template-columns: repeat(1, 100vw);
       gap: 20px;
@@ -145,20 +135,29 @@
           color: #555353;
           text-align: center;
           font-style: italic;
-          line-height: 3.4rem;
+          line-height: 2.3rem;
           font-size: 0.9rem; }
 
 @media screen and (min-width: 768px) {
   .hero .container .row {
     padding: 25px 0;
     display: grid;
-    grid-template-columns: repeat(2, 34rem);
+    grid-template-columns: repeat(2, 50%);
     gap: 20px;
     grid-template-areas: "part1 part2" "part3 part4" "part5 part6";
     align-items: center; }
     .hero .container .row .col-12 .imagenes__cocineros {
-      width: 28rem;
-      margin: 0 auto; } }
+      width: 20rem;
+      margin: 0 auto; }
+      .hero .container .row .col-12 .imagenes__cocineros .description__us {
+        line-height: 3.4rem; } }
+
+@media screen and (min-width: 1024px) {
+  .hero .container .row .col-12 .imagenes__cocineros {
+    width: 28rem;
+    margin: 0 auto; }
+  .hero .container .row .col-lg-6 .description__us {
+    line-height: 3.4rem; } }
 
 .foot {
   display: flex;
@@ -227,21 +226,28 @@
         font-size: 1.1em;
         color: #707070;
         transition: .4s; }
-  @media screen and (min-width: 768px) {
-    .review .reviews {
-      margin: 0 25px; }
-      .review .reviews__testimonios {
-        width: 400px;
-        background: #fff;
-        min-height: 470px;
-        margin: 15px 60px; }
-        .review .reviews__testimonios .image {
-          width: 15rem;
-          height: 10rem; } }
+
+@media screen and (min-width: 768px) {
+  .reviews {
+    margin: 0 25px; }
+    .reviews__testimonios {
+      width: 33rem;
+      min-height: 470px;
+      margin: 15px 60px;
+      box-shadow: 7px 11px 22px #dddbdb; }
+      .reviews__testimonios .image {
+        width: 15rem;
+        height: 10rem; } }
+
+@media screen and (min-width: 1024px) {
+  .review .reviews__testimonios {
+    background: #fff;
+    width: 25rem;
+    box-shadow: 7px 11px 22px white; }
   .review .reviews__testimonios:hover {
+    background: #eee;
     box-shadow: 7px 11px 22px #dddbdb;
-    background-color: #eee;
-    cursor: pointer; }
+    cursor: pointer; } }
 
 .tittle2 {
   text-align: center;
@@ -252,11 +258,25 @@
 .container__grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(8, 200px);
-  grid-template-areas: "imagen1 imagen2 imagen3 imagen3" "imagen1 imagen4 imagen3 imagen3" "imagen7 imagen4 imagen6 imagen9" "imagen7 imagen12 imagen6 imagen9" "imagen8 imagen8 imagen11 imagen10" "imagen8 imagen8 imagen11 imagen10" "imagen5 imagen5 imagen13 imagen13" "imagen5 imagen5 imagen13 imagen13";
+  grid-template-rows: repeat(7, 200px);
+  grid-template-areas: "imagen1 imagen3 imagen3 imagen3" "imagen4 imagen4 imagen4 imagen2" "imagen7 imagen7 imagen9 imagen9" "imagen12 imagen6 imagen6 imagen6" "imagen10 imagen10 imagen10 imagen10" "imagen8 imagen8 imagen11 imagen11" "imagen5 imagen5 imagen5 imagen13";
+  /*
+        "imagen1 imagen2 imagen3 imagen3"
+        "imagen1 imagen4 imagen3 imagen3"
+        "imagen7 imagen4 imagen6 imagen9"
+        "imagen7 imagen12 imagen6 imagen9"
+        "imagen8 imagen8 imagen11 imagen10"
+        "imagen8 imagen8 imagen11 imagen10"
+        "imagen5 imagen5 imagen13 imagen13"
+        "imagen5 imagen5 imagen13 imagen13";
+    */
   padding: 26px 10px;
   object-fit: cover;
-  gap: 10px; }
+  gap: 10px;
+  /*
+        .grid__item:hover .grid__image{
+            transform: scale(1.1);
+        } */ }
   .container__grid .grid__item {
     height: 100%;
     overflow: hidden;
@@ -265,13 +285,7 @@
       width: 100%;
       height: 100%;
       border-radius: 10px;
-      object-fit: cover;
-      filter: grayscale(1);
-      transition: .1s; }
-    .container__grid .grid__item .grid__image:hover {
-      filter: grayscale(0); }
-  .container__grid .grid__item:hover .grid__image {
-    transform: scale(1.1); }
+      object-fit: cover; }
   .container__grid .item1 {
     grid-area: imagen1; }
   .container__grid .item2 {
@@ -299,29 +313,41 @@
   .container__grid .item13 {
     grid-area: imagen13; }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .container__grid {
     display: grid;
     grid-template-columns: repeat(4, 25%);
-    grid-template-rows: repeat(4, 200px);
-    grid-template-areas: "imagen1 imagen1 imagen3 imagen3" "imagen2 imagen4 imagen3 imagen3" "imagen7 imagen7 imagen9 imagen9" "imagen12 imagen6 imagen6 imagen6" "imagen8 imagen8 imagen10 imagen10" "imagen8 imagen8 imagen11 imagen11" "imagen5 imagen5 imagen5 imagen13";
+    grid-template-rows: repeat(8, 200px);
+    grid-template-areas: "imagen1 imagen1 imagen1 imagen3" "imagen2 imagen4 imagen4 imagen4" "imagen12 imagen12 imagen9 imagen9" "imagen12 imagen12 imagen6 imagen6" "imagen8 imagen8 imagen10 imagen10" "imagen8 imagen8 imagen11 imagen11" "imagen5 imagen5 imagen5 imagen13" "imagen5 imagen5 imagen5 imagen13";
+    gap: 5px;
+    margin: 0 10px;
+    justify-content: center; } }
+
+@media screen and (min-width: 1024px) {
+  .container__grid {
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: repeat(8, 200px);
+    grid-template-areas: "imagen1 imagen2 imagen3 imagen3" "imagen1 imagen4 imagen3 imagen3" "imagen7 imagen4 imagen6 imagen9" "imagen7 imagen12 imagen6 imagen9" "imagen8 imagen8 imagen11 imagen10" "imagen8 imagen8 imagen11 imagen10" "imagen5 imagen5 imagen13 imagen13" "imagen5 imagen5 imagen13 imagen13";
     gap: 5px;
     margin: 0 10px;
     justify-content: center; }
     .container__grid .grid__item .grid__image {
+      filter: grayscale(1); }
+    .container__grid .grid__item .grid__image:hover {
       filter: grayscale(0); } }
 
 .form {
-  width: 400px;
+  width: 90%;
   background: #24303c;
-  padding: 30px;
+  padding: 1rem;
   margin: auto;
-  margin-top: 100px;
+  margin-top: 4rem;
   border-radius: 4px;
   color: #eee;
   box-shadow: 7px 13px 37px #000; }
   .form h4 {
-    font-size: 22px;
+    font-size: 1.2rem;
     margin-bottom: 20px; }
   .form .form-flex .controls {
     width: 100%;
@@ -338,3 +364,11 @@
     color: #eee;
     margin: 16px auto;
     font-size: 16px; }
+
+@media screen and (min-width: 768px) {
+  .form {
+    width: 70%; } }
+
+@media screen and (min-width: 1024px) {
+  .form {
+    width: 40%; } }
