--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,14 +1,14 @@
 .form{
-    width: 400px;
+    width: 90%;
     background: #24303c;
-    padding: 30px;
+    padding: 1rem;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 4rem;
     border-radius: 4px;
     color: $white-color;
     box-shadow: $shadow;
     h4{
-        font-size: 22px;
+        font-size: 1.2rem;
         margin-bottom: 20px;
         }
     .form-flex{
@@ -30,5 +30,19 @@
             margin: 16px auto;
             font-size: 16px;
                 }
+    }
+}
+
+
+@media screen and (min-width: 768px) {
+    .form{
+        width: 70%;
+    }
+}
+
+
+@media screen and (min-width: 1024px) {
+    .form{
+        width: 40%;
     }
 }
