--- a/scss/_fotos.scss
+++ b/scss/_fotos.scss
@@ -8,8 +8,16 @@
     
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(8, 200px);
+    grid-template-rows: repeat(7, 200px);
     grid-template-areas: 
+            "imagen1 imagen3 imagen3 imagen3"
+            "imagen4 imagen4 imagen4 imagen2"
+            "imagen7 imagen7 imagen9 imagen9"
+            "imagen12 imagen6 imagen6 imagen6"
+            "imagen10 imagen10 imagen10 imagen10"
+            "imagen8 imagen8 imagen11 imagen11"
+            "imagen5 imagen5 imagen5 imagen13";
+    /*
         "imagen1 imagen2 imagen3 imagen3"
         "imagen1 imagen4 imagen3 imagen3"
         "imagen7 imagen4 imagen6 imagen9"
@@ -18,6 +26,7 @@
         "imagen8 imagen8 imagen11 imagen10"
         "imagen5 imagen5 imagen13 imagen13"
         "imagen5 imagen5 imagen13 imagen13";
+    */
     padding: 26px 10px;
     object-fit: cover;
     gap: 10px; 
@@ -31,16 +40,13 @@
             height: 100%;
             border-radius: 10px;
             object-fit: cover;
-            filter: grayscale(1);
-            transition: .1s; 
+            
             }
-        .grid__image:hover{
-            filter: grayscale(0);
         }
-        }
+        /*
         .grid__item:hover .grid__image{
             transform: scale(1.1);
-        }
+        } */
         .item1{
             grid-area: imagen1;
         }
@@ -95,30 +101,60 @@
     
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
     .container__grid {
         display: grid;
         grid-template-columns: repeat(4, 25%);
-        grid-template-rows: repeat(4, 200px);
+        grid-template-rows: repeat(8, 200px);
+        
         grid-template-areas: 
-            "imagen1 imagen1 imagen3 imagen3"
-            "imagen2 imagen4 imagen3 imagen3"
-            "imagen7 imagen7 imagen9 imagen9"
-            "imagen12 imagen6 imagen6 imagen6"
+            "imagen1 imagen1 imagen1 imagen3"
+            "imagen2 imagen4 imagen4 imagen4"
+            "imagen12 imagen12 imagen9 imagen9"
+            "imagen12 imagen12 imagen6 imagen6"
             "imagen8 imagen8 imagen10 imagen10"
             "imagen8 imagen8 imagen11 imagen11"
+            "imagen5 imagen5 imagen5 imagen13"
             "imagen5 imagen5 imagen5 imagen13";
+        
+            gap: 5px;
+            margin: 0 10px;
+            justify-content: center;
+        .grid__item{
+            
+    }
+}
+}
+
+
+
+@media screen and (min-width: 1024px) {
+    .container__grid {
+        display: grid;
+        grid-template-columns: repeat(4, 25%);
+        grid-template-rows: repeat(8, 200px);
+        grid-template-areas: 
+                "imagen1 imagen2 imagen3 imagen3"
+                "imagen1 imagen4 imagen3 imagen3"
+                "imagen7 imagen4 imagen6 imagen9"
+                "imagen7 imagen12 imagen6 imagen9"
+                "imagen8 imagen8 imagen11 imagen10"
+                "imagen8 imagen8 imagen11 imagen10"
+                "imagen5 imagen5 imagen13 imagen13"
+                "imagen5 imagen5 imagen13 imagen13";
             gap: 5px;
             margin: 0 10px;
             justify-content: center;
         .grid__item{
             .grid__image{                
-                filter: grayscale(0);            
+                filter: grayscale(1);            
                 }
-    }
+            .grid__image:hover{
+                filter: grayscale(0);
+            }
 }
 }
-
+}
 
 
 
