--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -20,16 +20,7 @@
         display: grid;
         
         .row{
-            /*
-            display: grid;
-            grid-template-columns: repeat(2, 34rem);
-            gap: 20px;
-            grid-template-areas:
-            "part1 part2"
-            "part3 part4"
-            "part5 part6";
-            align-items: center;
-            */
+        
             display: grid;
             grid-template-columns: repeat(1, 100vw);
             gap: 20px;
@@ -90,7 +81,7 @@
                 color: $grey-color2;
                 text-align: center;
                 font-style: italic;
-                line-height: 3.4rem;
+                line-height: 2.3rem;
                 font-size: 0.9rem;
             }
 }
@@ -105,7 +96,7 @@
     .row{
         padding: 25px 0;
         display: grid;
-            grid-template-columns: repeat(2, 34rem);
+            grid-template-columns: repeat(2, 50%);
             gap: 20px;
             grid-template-areas:
             "part1 part2"
@@ -115,8 +106,11 @@
             
         .col-12{
             .imagenes__cocineros{
-                width: 28rem;
+                width: 20rem;
                 margin: 0 auto;
+                .description__us{
+                    line-height: 3.4rem;
+                }
             }
         }
         }
@@ -124,3 +118,26 @@
     }
 
 }
+
+
+@media screen and (min-width: 1024px) {
+    .hero{
+        .container{
+            .row{
+                .col-12{
+                    .imagenes__cocineros{
+                        width: 28rem;
+                        margin: 0 auto;
+                    }
+                }
+                    .col-lg-6{
+                    .description__us{
+                        line-height: 3.4rem;
+                    }
+                    }
+            }
+        }
+        }
+    
+    }
+    
