--- a/scss/_fotos.scss
+++ b/scss/_fotos.scss
@@ -147,10 +147,12 @@
             justify-content: center;
         .grid__item{
             .grid__image{                
-                filter: grayscale(1);            
+                filter: grayscale(1);
+                transition: .4s;            
                 }
             .grid__image:hover{
                 filter: grayscale(0);
+                transform: scale(1.1);
             }
 }
 }
